Issue #32: Create GraphQL endpoint for user and video